--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -192,7 +192,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Models\Static\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
