Mise à jour de l'application - Mise à jour de la page d'authentification.

--- a/GB/Web.config
+++ b/GB/Web.config
@@ -19,7 +19,7 @@
     <!-- Clé de cryptage et decriptage des données -->
     <add key="ENCRYPTION_KEY_AES" value="global_bank_aes" />
     <!-- Version des builds successif -->
-    <add key="VERSION_BUILD" value="13062018.1" />
+    <add key="VERSION_BUILD" value="15062018.1" />
   </appSettings>
   
   <system.web>
@@ -28,6 +28,8 @@
     <httpRuntime targetFramework="4.5.2" />
     <!-- La valeur de la durée de la session 1 = minutes -->
     <sessionState timeout="30" mode="InProc" />
+    <!-- changer la culture info -->
+    <globalization uiCulture="en-US" culture="en-US" />
   </system.web>
   
   <system.webServer>
