--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -184,11 +184,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CryptoJS\Cryptage.cs" />
+    <Compile Include="Models\CryptoJS\Program.cs" />
+    <Compile Include="Models\GBNotification.cs" />
     <Compile Include="Models\Helper\LangHelper.cs" />
     <Compile Include="Models\Static\AppSettings.cs" />
-    <Compile Include="Models\CryptoJS\Program.cs" />
     <Compile Include="Models\Static\Enumeration.cs" />
     <Compile Include="Models\Static\GBClass.cs" />
+    <Compile Include="Models\Static\GBConvert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
