--- a/GB/bin/GB.dll.config
+++ b/GB/bin/GB.dll.config
@@ -16,8 +16,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Clé de cryptage et decriptage des données -->
+    <add key="ENCRYPTION_KEY_AES" value="global_bank_aes" />
     <!-- Version des builds successif -->
-    <add key="VERSION_BUILD" value="13062018.1" />
+    <add key="VERSION_BUILD" value="14062018.1" />
   </appSettings>
   
   <system.web>
@@ -26,6 +28,8 @@
     <httpRuntime targetFramework="4.5.2" />
     <!-- La valeur de la durée de la session 1 = minutes -->
     <sessionState timeout="30" mode="InProc" />
+    <!-- changer la culture info -->
+    <globalization uiCulture="en-US" culture="en-US" />
   </system.web>
   
   <system.webServer>
