--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -48,6 +48,14 @@
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Core.2.2.3\lib\net45\Microsoft.AspNet.SignalR.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.SystemWeb, Version=2.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.SystemWeb.2.2.3\lib\net45\Microsoft.AspNet.SignalR.SystemWeb.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
       <Private>True</Private>
@@ -179,20 +187,27 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ErreurController.cs" />
     <Compile Include="Controllers\GBController.cs" />
     <Compile Include="Controllers\ApplicationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ActionFilter\AuthentificationRequis.cs" />
+    <Compile Include="Models\ActionFilter\ResponseErreur.cs" />
+    <Compile Include="Models\Connexion.cs" />
     <Compile Include="Models\Cryptage\Program.cs" />
     <Compile Include="Models\GBException.cs" />
     <Compile Include="Models\GBNotification.cs" />
     <Compile Include="Models\Helper\LangHelper.cs" />
+    <Compile Include="Models\SignalR\Hubs\GBHub.cs" />
     <Compile Include="Models\Static\AppSettings.cs" />
     <Compile Include="Models\Static\Enumeration.cs" />
     <Compile Include="Models\Static\GBClass.cs" />
     <Compile Include="Models\Static\GBConvert.cs" />
+    <Compile Include="Models\Static\Menu.cs" />
+    <Compile Include="Models\Static\TestClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -205,6 +220,7 @@
     <Content Include="Plugins\animate.css\animate.min.css" />
     <Content Include="Plugins\animate.css\gulpfile.js" />
     <Content Include="Plugins\CryptoJS\CryptoJS.js" />
+    <Content Include="Plugins\fastclick\lib\fastclick.js" />
     <Content Include="Plugins\font-awesome\css\font-awesome.css" />
     <Content Include="Plugins\font-awesome\css\font-awesome.min.css" />
     <Content Include="Plugins\font-awesome\fonts\fontawesome-webfont.svg" />
@@ -323,6 +339,11 @@
     <Content Include="Plugins\iCheck\skins\square\yellow.css" />
     <Content Include="Plugins\iCheck\skins\square\yellow.png" />
     <Content Include="Plugins\iCheck\skins\square\_all.css" />
+    <Content Include="Plugins\malihu-custom-scrollbar-plugin\jquery.mCustomScrollbar.concat.min.js" />
+    <Content Include="Plugins\malihu-custom-scrollbar-plugin\jquery.mCustomScrollbar.css" />
+    <Content Include="Plugins\malihu-custom-scrollbar-plugin\jquery.mCustomScrollbar.js" />
+    <Content Include="Plugins\malihu-custom-scrollbar-plugin\jquery.mCustomScrollbar.min.css" />
+    <Content Include="Plugins\malihu-custom-scrollbar-plugin\mCSB_buttons.png" />
     <Content Include="Plugins\nprogress\index.html" />
     <Content Include="Plugins\nprogress\nprogress.css" />
     <Content Include="Plugins\nprogress\nprogress.js" />
@@ -656,13 +677,16 @@
     <Content Include="Resources\css\custom.min.css" />
     <Content Include="Resources\css\gb.style.css" />
     <Content Include="Resources\css\gb.style.min.css" />
+    <Content Include="Resources\css\Views\Application-Main.css" />
     <Content Include="Resources\css\Views\Home-Authentication.css" />
     <Content Include="Resources\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Resources\images\png\flag\en-US.png" />
     <Content Include="Resources\images\png\flag\fr-FR.png" />
     <Content Include="Resources\images\png\Grey.png" />
+    <Content Include="Resources\images\png\Utilisateur.png" />
     <Content Include="Resources\js\bootstrap.js" />
     <Content Include="Resources\js\bootstrap.min.js" />
+    <Content Include="Resources\js\Views\Application-Main.js" />
     <Content Include="Resources\js\_references.js" />
     <Content Include="Resources\js\custom.js" />
     <Content Include="Resources\js\custom.min.js" />
@@ -675,6 +699,8 @@
     <Content Include="Resources\js\menu.min.js" />
     <Content Include="Resources\js\npm.js" />
     <Content Include="Resources\js\Views\Home-Authentication.js" />
+    <Content Include="Plugins\signalR\Scripts\jquery.signalR-2.2.3.js" />
+    <Content Include="Plugins\signalR\Scripts\jquery.signalR-2.2.3.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -885,6 +911,40 @@
     <Content Include="Resources\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Resources\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Resources\fonts\glyphicons-halflings-regular.woff2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_LayoutApplication.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_LayoutErreur.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Erreur\Page.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Plugins\malihu-custom-scrollbar-plugin\.bower.json" />
+    <Content Include="Plugins\malihu-custom-scrollbar-plugin\bower.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Plugins\fastclick\.bower.json" />
+    <Content Include="Plugins\fastclick\bower.json" />
+    <Content Include="Plugins\fastclick\LICENSE" />
+    <Content Include="Plugins\fastclick\README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_Footer.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_Menu.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Application\Main\_Menu.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Application\Main.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Application\Main\_Header.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
