--- a/GB/bin/GB.dll.config
+++ b/GB/bin/GB.dll.config
@@ -5,7 +5,7 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- Section pour la dll log4net -->
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
   </configSections>
   
   <connectionStrings>
@@ -18,8 +18,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!-- Clé de cryptage et decriptage des données -->
     <add key="ENCRYPTION_KEY_AES" value="global_bank_aes" />
+    <!-- Nom de l'application -->
+    <add key="APP_NAME" value="Global Bank" />
+    <!-- Mon lien de déploiement -->
+    <add key="URL_APPLICATION" value="http://localhost:4409/" />
     <!-- Version des builds successif -->
-    <add key="VERSION_BUILD" value="18062018.1" />
+    <add key="VERSION_BUILD" value="19062018.1" />
   </appSettings>
   
   <system.web>
@@ -108,21 +112,21 @@
   <!-- Section pour la dll log4net -->
   <log4net>
     <appender name="TestAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="App_Data/Log.txt"/>
-      <encoding value="utf-8"/>
-      <appendToFile value="true"/>
-      <rollingStyle value="Size"/>
-      <maxSizeRollBackups value="10"/>
-      <maximumFileSize value="1024MB"/>
-      <staticLogFileName value="true"/>
+      <file value="App_Data/Log.txt" />
+      <encoding value="utf-8" />
+      <appendToFile value="true" />
+      <rollingStyle value="Size" />
+      <maxSizeRollBackups value="10" />
+      <maximumFileSize value="1024MB" />
+      <staticLogFileName value="true" />
       <!-- ./Ajout d'un parametre au pattern log4net -->
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date{dd/MM/yyyy HH:mm:ss.fff} | %level | [%thread] | %type.%method | %message %n-----------------------%n"/>
+        <conversionPattern value="%date{dd/MM/yyyy HH:mm:ss.fff} | %level | [%thread] | %type.%method | %message %n-----------------------%n" />
       </layout>
     </appender>
     <root>
-      <level value="All"/>
-      <appender-ref ref="TestAppender"/>
+      <level value="All" />
+      <appender-ref ref="TestAppender" />
     </root>
   </log4net>
   
