- Mise à jour Version application - Suppression du titre du formulaire d'authentification - Aligner les champs en une ligne - Supprimer le label du combo box langue - Mise à jour du style des contrôles au focus - Mise à jour du fond d'écran de la page d'authentification

--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -680,6 +680,7 @@
     <Content Include="Resources\css\Views\Application-Main.css" />
     <Content Include="Resources\css\Views\Home-Authentication.css" />
     <Content Include="Resources\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Resources\images\png\bg_grey.png" />
     <Content Include="Resources\images\png\flag\en-US.png" />
     <Content Include="Resources\images\png\flag\fr-FR.png" />
     <Content Include="Resources\images\png\Grey.png" />
