--- a/GB/bin/GB.dll.config
+++ b/GB/bin/GB.dll.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Durée d'expiration de l'afficharge du message box -->
+    <add key="DUREE_VISIBILITE_MESSAGE_BOX" value="10000" />
     <!-- Clé de cryptage et decriptage des données -->
     <add key="ENCRYPTION_KEY_AES" value="global_bank_aes" />
     <!-- Nom de l'application -->
@@ -23,7 +25,7 @@
     <!-- Mon lien de déploiement -->
     <add key="URL_APPLICATION" value="http://localhost:4409/" />
     <!-- Version des builds successif -->
-    <add key="VERSION_BUILD" value="22062018.1" />
+    <add key="VERSION_BUILD" value="23062018.1" />
   </appSettings>
   
   <system.web>
