--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -723,6 +723,7 @@
     <Content Include="Resources\js\bootstrap.js" />
     <Content Include="Resources\js\bootstrap.min.js" />
     <Content Include="Resources\js\gb.menu.js" />
+    <Content Include="Resources\js\Views\Securite-Menu.js" />
     <Content Include="Resources\js\Views\Securite-Role.js" />
     <Content Include="Resources\js\Views\Securite-Module.js" />
     <Content Include="Resources\js\Views\Application-Principale.js" />
@@ -1008,6 +1009,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Securite\Role.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Securite\Menu\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Securite\Menu.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
