- Mise à jour application. - Creation du fichier Json des arbre menu - Mise à jour du module menu - Mise à jour de la position du molal. - Mise à jour Version d'application

--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -1016,6 +1016,9 @@
   <ItemGroup>
     <Content Include="Views\Securite\Menu.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_Data\Arbre_menu.json" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
