- Mise à jour application.

--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -212,6 +212,7 @@
     <Compile Include="Models\DAO\ModuleDAO.cs" />
     <Compile Include="Models\DAO\MenuDAO.cs" />
     <Compile Include="Models\DAO\AutorisationDAO.cs" />
+    <Compile Include="Models\DAO\GroupeMenuDAO.cs" />
     <Compile Include="Models\DAO\RoleDAO.cs" />
     <Compile Include="Models\DAO\UtilisateurDAO.cs" />
     <Compile Include="Models\Helper\LangHelper.cs" />
