- Intégration du menu securité-utilisateur - Corrections des beugs - Mise à jour application

--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -187,6 +187,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\SecuriteUtilisateurController.cs" />
     <Compile Include="Controllers\SecuriteController.cs" />
     <Compile Include="Controllers\ErreurController.cs" />
     <Compile Include="Controllers\GBController.cs" />
@@ -197,22 +198,26 @@
     </Compile>
     <Compile Include="Models\ActionFilter\AuthentificationRequis.cs" />
     <Compile Include="Models\ActionFilter\ResponseErreur.cs" />
+    <Compile Include="Models\BO\Profession.cs" />
     <Compile Include="Models\BO\Autorisation.cs" />
     <Compile Include="Models\BO\Connexion.cs" />
     <Compile Include="Models\BO\GBBO.cs" />
     <Compile Include="Models\BO\GroupeMenu.cs" />
     <Compile Include="Models\BO\Menu.cs" />
     <Compile Include="Models\BO\Module.cs" />
+    <Compile Include="Models\BO\Agence.cs" />
     <Compile Include="Models\BO\Role.cs" />
     <Compile Include="Models\BO\Utilisateur.cs" />
     <Compile Include="Models\Cryptage\Program.cs" />
     <Compile Include="Models\BO\GBException.cs" />
     <Compile Include="Models\BO\GBNotification.cs" />
+    <Compile Include="Models\DAO\ProfessionDAO.cs" />
     <Compile Include="Models\DAO\GBDAO.cs" />
     <Compile Include="Models\DAO\ModuleDAO.cs" />
     <Compile Include="Models\DAO\MenuDAO.cs" />
     <Compile Include="Models\DAO\AutorisationDAO.cs" />
     <Compile Include="Models\DAO\GroupeMenuDAO.cs" />
+    <Compile Include="Models\DAO\AgenceDAO.cs" />
     <Compile Include="Models\DAO\RoleDAO.cs" />
     <Compile Include="Models\DAO\UtilisateurDAO.cs" />
     <Compile Include="Models\Helper\LangHelper.cs" />
@@ -221,6 +226,7 @@
     <Compile Include="Models\Static\Enumeration.cs" />
     <Compile Include="Models\Static\GBClass.cs" />
     <Compile Include="Models\Static\GBConvert.cs" />
+    <Compile Include="Models\Static\GBToString.cs" />
     <Compile Include="Models\Tests\BD.cs" />
     <Compile Include="Models\Tests\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -737,6 +743,7 @@
     <Content Include="Resources\js\bootstrap.min.js" />
     <Content Include="Resources\js\gb.menu.js" />
     <Content Include="Resources\js\Views\Securite-Menu.js" />
+    <Content Include="Resources\js\Views\SecuriteUtilisateur-Utilisateur.js" />
     <Content Include="Resources\js\Views\Securite-Role.js" />
     <Content Include="Resources\js\Views\Securite-Module.js" />
     <Content Include="Resources\js\Views\Application-Principale.js" />
@@ -1034,6 +1041,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\base_de_donnees.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SecuriteUtilisateur\Utilisateur\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\SecuriteUtilisateur\Utilisateur.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
