--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -187,6 +187,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ConfigurationBanqueController.cs" />
     <Compile Include="Controllers\SecuriteUtilisateurController.cs" />
     <Compile Include="Controllers\SecuriteController.cs" />
     <Compile Include="Controllers\ErreurController.cs" />
@@ -198,6 +199,7 @@
     </Compile>
     <Compile Include="Models\ActionFilter\AuthentificationRequis.cs" />
     <Compile Include="Models\ActionFilter\ResponseErreur.cs" />
+    <Compile Include="Models\BO\GBFichier.cs" />
     <Compile Include="Models\BO\Profession.cs" />
     <Compile Include="Models\BO\Autorisation.cs" />
     <Compile Include="Models\BO\Connexion.cs" />
@@ -206,6 +208,7 @@
     <Compile Include="Models\BO\Menu.cs" />
     <Compile Include="Models\BO\Module.cs" />
     <Compile Include="Models\BO\Agence.cs" />
+    <Compile Include="Models\BO\Institution.cs" />
     <Compile Include="Models\BO\Role.cs" />
     <Compile Include="Models\BO\Utilisateur.cs" />
     <Compile Include="Models\Cryptage\Program.cs" />
@@ -218,6 +221,7 @@
     <Compile Include="Models\DAO\AutorisationDAO.cs" />
     <Compile Include="Models\DAO\GroupeMenuDAO.cs" />
     <Compile Include="Models\DAO\AgenceDAO.cs" />
+    <Compile Include="Models\DAO\InstitutionDAO.cs" />
     <Compile Include="Models\DAO\RoleDAO.cs" />
     <Compile Include="Models\DAO\UtilisateurDAO.cs" />
     <Compile Include="Models\Helper\LangHelper.cs" />
@@ -743,6 +747,7 @@
     <Content Include="Resources\js\bootstrap.min.js" />
     <Content Include="Resources\js\gb.menu.js" />
     <Content Include="Resources\js\Views\Securite-Menu.js" />
+    <Content Include="Resources\js\Views\ConfigurationBanque-Institution.js" />
     <Content Include="Resources\js\Views\SecuriteUtilisateur-Utilisateur.js" />
     <Content Include="Resources\js\Views\Securite-Role.js" />
     <Content Include="Resources\js\Views\Securite-Module.js" />
@@ -1047,6 +1052,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\SecuriteUtilisateur\Utilisateur.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationBanque\Institution\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationBanque\Institution.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
