--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -273,6 +273,12 @@
     <Content Include="Plugins\datatables\images\sort_desc.png" />
     <Content Include="Plugins\datatables\images\sort_desc_disabled.png" />
     <Content Include="Plugins\datatables\jquery.dataTables.js" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\easy-autocomplete.css" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\easy-autocomplete.min.css" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\easy-autocomplete.themes.css" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\easy-autocomplete.themes.min.css" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\jquery.easy-autocomplete.js" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\jquery.easy-autocomplete.min.js" />
     <Content Include="Plugins\fastclick\lib\fastclick.js" />
     <Content Include="Plugins\font-awesome\css\font-awesome.css" />
     <Content Include="Plugins\font-awesome\css\font-awesome.min.css" />
@@ -751,6 +757,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ConfigurationBanque\Agence.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\maps\easy-autocomplete.css.map" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\maps\easy-autocomplete.min.css.map" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\maps\easy-autocomplete.themes.css.map" />
+    <Content Include="Plugins\EasyAutocomplete-1.3.5\maps\easy-autocomplete.themes.min.css.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
