--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Models\ActionFilter\ResponseErreur.cs" />
     <Compile Include="Models\BO\GBFichier.cs" />
     <Compile Include="Models\BO\Devise.cs" />
+    <Compile Include="Models\BO\ProduitJudiciaire.cs" />
     <Compile Include="Models\BO\Produit.cs" />
     <Compile Include="Models\BO\ParametreBancaire.cs" />
     <Compile Include="Models\BO\Parametre.cs" />
@@ -219,6 +220,7 @@
     <Compile Include="Models\BO\GBException.cs" />
     <Compile Include="Models\BO\GBNotification.cs" />
     <Compile Include="Models\DAO\DeviseDAO.cs" />
+    <Compile Include="Models\DAO\ProduitJudiciaireDAO.cs" />
     <Compile Include="Models\DAO\ProduitDAO.cs" />
     <Compile Include="Models\DAO\ParametreBanqueDAO.cs" />
     <Compile Include="Models\DAO\ParametreDAO.cs" />
@@ -519,6 +521,7 @@
     <Content Include="Resources\js\Views\ConfigurationBanque-Parametre.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-ParametreBanque.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-ProduitClientPhysique.js" />
+    <Content Include="Resources\js\Views\ConfigurationBanque-ProduitClientJudiciaire.js" />
     <Content Include="Resources\js\Views\SecuriteUtilisateur-Utilisateur.js" />
     <Content Include="Resources\js\Views\Securite-Role.js" />
     <Content Include="Resources\js\Views\Securite-Module.js" />
@@ -796,6 +799,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\ConfigurationBanque\ProduitClientPhysique.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationBanque\ProduitClientJudiciaire\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationBanque\ProduitClientJudiciaire.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
