--- a/GB/Web.config
+++ b/GB/Web.config
@@ -26,8 +26,10 @@
     <add key="URL_APPLICATION" value="http://localhost:4409/" />
     <!-- Taille maximale des image à importer dans l'application (ko) -->
     <add key="TAILLE_MAX_IMAGE_IMPORTATION" value="250" />
+    <!-- Format de présentation des date dans l'application -->
+    <add key="FORMAT_DATE" value="dd/MM/yyyy" />
     <!-- Version des builds successif -->
-    <add key="VERSION_BUILD" value="13062018.3" />
+    <add key="VERSION_BUILD" value="13062018.4" />
   </appSettings>
   
   <system.web>
