- Mise à jour version de l'application - mise à jour du fichier global.asac - mise à jour de la vue produit judiciare

--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -806,6 +806,12 @@
   <ItemGroup>
     <Content Include="Views\ConfigurationBanque\ProduitClientJudiciaire.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationBanque\ProduitCreation\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationBanque\ProduitCreation.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
