--- a/GB/GB.csproj
+++ b/GB/GB.csproj
@@ -191,6 +191,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ConfigurationBanqueController.cs" />
     <Compile Include="Controllers\ConfigurationBudgetController.cs" />
+    <Compile Include="Controllers\ConfigurationOperationController.cs" />
     <Compile Include="Controllers\SecuriteUtilisateurController.cs" />
     <Compile Include="Controllers\SecuriteController.cs" />
     <Compile Include="Controllers\ErreurController.cs" />
@@ -207,6 +208,10 @@
     <Compile Include="Models\BO\ExerciceFiscal.cs" />
     <Compile Include="Models\BO\CongeBanque.cs" />
     <Compile Include="Models\BO\AutoriteSignature.cs" />
+    <Compile Include="Models\BO\ClassificationProvisionsPret.cs" />
+    <Compile Include="Models\BO\MotifPret.cs" />
+    <Compile Include="Models\BO\TypeGarantie.cs" />
+    <Compile Include="Models\BO\TypePret.cs" />
     <Compile Include="Models\BO\UniteInstitutionnelle.cs" />
     <Compile Include="Models\BO\Titre.cs" />
     <Compile Include="Models\BO\GBFichier.cs" />
@@ -236,6 +241,10 @@
     <Compile Include="Models\DAO\BEACNationaliteDAO.cs" />
     <Compile Include="Models\DAO\CongeBanqueDAO.cs" />
     <Compile Include="Models\DAO\AutoriteSignatureDAO.cs" />
+    <Compile Include="Models\DAO\ClassificationProvisionsPretDAO.cs" />
+    <Compile Include="Models\DAO\MotifPretDAO.cs" />
+    <Compile Include="Models\DAO\TypeGarantieDAO.cs" />
+    <Compile Include="Models\DAO\TypePretDAO.cs" />
     <Compile Include="Models\DAO\UniteInstitutionnelleDAO.cs" />
     <Compile Include="Models\DAO\TitreDAO.cs" />
     <Compile Include="Models\DAO\DeviseDAO.cs" />
@@ -874,6 +883,8 @@
     <Content Include="Resources\js\Views\ConfigurationBanque-UniteInstitutionnelle.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-Titre.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-Ville.js" />
+    <Content Include="Resources\js\Views\ConfigurationOperation-ClassificationProvisionsPret.js" />
+    <Content Include="Resources\js\Views\ConfigurationOperation-MotifPret.js" />
     <Content Include="Resources\js\Views\Securite-Menu.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-Institution.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-Agence.js" />
@@ -888,6 +899,8 @@
     <Content Include="Resources\js\Views\ConfigurationBudget-DirectionBudget.js" />
     <Content Include="Resources\js\Views\ConfigurationBanque-CongeBanque.js" />
     <Content Include="Resources\js\Views\ConfigurationBudget-AutoriteSignature.js" />
+    <Content Include="Resources\js\Views\ConfigurationOperation-TypePret.js" />
+    <Content Include="Resources\js\Views\ConfigurationOperation-TypeGarantie.js" />
     <Content Include="Resources\js\Views\SecuriteUtilisateur-Utilisateur.js" />
     <Content Include="Resources\js\Views\Securite-Role.js" />
     <Content Include="Resources\js\Views\Securite-Module.js" />
@@ -907,7 +920,9 @@
     <Content Include="Resources\js\Views\Home-Authentication.js" />
     <Content Include="Plugins\signalR\Scripts\jquery.signalR-2.2.3.js" />
     <Content Include="Plugins\signalR\Scripts\jquery.signalR-2.2.3.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -916,7 +931,6 @@
     </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Authentication.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -1262,6 +1276,30 @@
   <ItemGroup>
     <Content Include="Plugins\input-mask\phone-codes\phone-be.json" />
     <Content Include="Plugins\input-mask\phone-codes\phone-codes.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\TypePret\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\TypePret.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\MotifPret\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\MotifPret.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\ClassificationProvisionsPret\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\ClassificationProvisionsPret.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\TypeGarantie\_Modals.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\ConfigurationOperation\TypeGarantie.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
